--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "stardew-save-editor",
+  "description": "A save editor for Stardew Valley",
+  "author": "",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -14,20 +16,42 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
-    "concurrently": "^9.2.1",
-    "cross-env": "^10.1.0",
-    "electron-builder": "^26.0.12",
     "element-plus": "^2.13.0",
     "fast-xml-parser": "^5.3.3",
     "file-saver": "^2.0.5",
-    "vite-plugin-electron": "^0.29.0",
-    "vite-plugin-electron-renderer": "^0.14.6",
     "vue": "^3.5.24"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "concurrently": "^9.2.1",
+    "cross-env": "^10.1.0",
     "electron": "^39.2.7",
+    "electron-builder": "^26.0.12",
     "vite": "^7.2.4",
+    "vite-plugin-electron": "^0.29.0",
+    "vite-plugin-electron-renderer": "^0.14.6",
     "wait-on": "^9.0.3"
+  },
+  "build": {
+    "appId": "com.stardew-save-editor",
+    "productName": "stardew-save-editor",
+    "files": [
+      "dist/**/*",
+      "electron/**/*",
+      "package.json"
+    ],
+    "directories": {
+      "buildResources": "public"
+    },
+    "win": {
+      "target": [
+        "nsis",
+        "portable"
+      ]
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
+    }
   }
 }
